[gd_scene load_steps=3 format=3 uid="uid://d20y2frfvcjdj"]

[ext_resource type="Script" uid="uid://cpcsnwhknqar7" path="res://Chips/chip.gd" id="1_aq8x0"]
[ext_resource type="Texture2D" uid="uid://donxbu345vi4" path="res://Graphics/UI/Chips/chip.JPG" id="2_t1vjw"]

[node name="Chip" type="Control"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 3
anchors_preset = 0
offset_right = 20.0
offset_bottom = 20.0
script = ExtResource("1_aq8x0")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_t1vjw")
expand_mode = 2

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="mouse_entered" from="TextureRect" to="." method="_on_texture_rect_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect" to="." method="_on_texture_rect_mouse_exited"]
